--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -32,6 +32,7 @@ Parameters:
 
   GitHubToken:
     Type: String
+    Default: GIT_TOKEN
     NoEcho: true
     Description: GitHub API token - see https://github.com/blog/1509-personal-api-tokens
     MinLength: 3
